# tokencrush

./: .gitignore  README.md  install.ps1  install.sh  package.json  pyproject.toml
tokencrush/: __init__.py  __main__.py  cache.py  cli.py  converter.py  counter.py  hook.py
